# TDD-library

./: CMakeLists.txt  project.pro  solution.hpp  test.cpp  test.hpp
student/: solution.hpp
tests/: test.cpp
